--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       }
     </style>
     <script>
+      LS = localStorage;
       $ = require('jquery');
       Bridge = require('./build/Release/bridge');
 
