--- a/conditions.html
+++ b/conditions.html
@@ -2,7 +2,8 @@
 <button onclick='nu()'>NEW</button>
 <script>
 	function nu() {
-		Back();
-		addPump();
+		$('body').load('notes.html');
+		//Back();
+		//addPump();
 	}
 </script>
