--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         cursor: pointer;
         
       }
+      h1 {
+        color: green;
+      }
       button {
         color: dodgerblue;
       }
