--- a/curve.html
+++ b/curve.html
@@ -1,8 +1,5 @@
 
 <style scoped>
-	h1 {
-	    color: green;
-	  }
 	canvas {
 		background-color: black;
 		/*border: 3px solid green;*/
@@ -17,7 +14,7 @@
 		<input type=number/><br>	
 	</form><br>
 	<canvas width="700" height="500" /><br>
-	<button onclick='BackToCond()'>BACK</button>
+	<button onclick='Back()'>BACK</button>
 </div>
 
 <script>
