--- a/details.html
+++ b/details.html
@@ -213,7 +213,7 @@ Pump Style
     </tr>
     <tr>
       <td>Specific Gravity</td>
-      <td><input name='sg' type="number"></td>
+      <td><input name='specific_gravity' type="number"></td>
     </tr>
     <tr>
       <td>Number Stages</td>
@@ -255,7 +255,7 @@ Pump Style
     </tr>    
     <tr>
       <td>Voltage</td>
-      <td><input name='voltage' type="number"></td>
+      <td><input name='motor_voltage' type="number"></td>
     </tr>
     <tr>
       <td>Full-load amps</td>
@@ -302,7 +302,7 @@ Pump Style
     </tr>
     <tr>
       <td>Voltage</td>
-      <td><input name='voltage' type="number"></td>
+      <td><input name='field_voltage' type="number"></td>
     </tr>
     <tr>
       <td class='th vam'><span>Results</span> <button onclick='load("curve")'>CURVE</button></td><td></td>
