--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       $ = require('jquery');
       Bridge = require('./build/Release/bridge');
       LS = localStorage;
+      // W = window;
       Cond = JSON.parse(LS.getItem('conditions'));
 
       $(document).ready(function() {
