--- a/details.html
+++ b/details.html
@@ -239,6 +239,13 @@ Pump Style
   function pumpEff(v) {        
     $('td:contains("Pump efficiency")').next().html(Bridge.pumpEff(v)+' <span>(109)</span>');
   }
+  function updatePump(d) {
+    $('th').each(function(i,e) {
+      if (Idx == $(e).data('idx')) {
+        $(e).css('background-color:yellow');
+      }
+    });
+  }
   function addPump(d) {     
     const thAdd = $('th').last().detach();
     $('table tr').each(function (i,e) {
