--- a/notes.html
+++ b/notes.html
@@ -34,58 +34,43 @@
 </form>
 	<button onclick='Back()'>CANCEL</button> <button onclick='save()'>SAVE</button>
 <script>
-	if (window['Idx']) {
+	if (Idx<Cond.length) {
 		$('[name]').each(function(i,e) {
 			$(e).val(Cond[Idx][$(e).attr('name')]);
 		});				
 	} else {
-		//Idx = Cond ? Cond.length : 0;
-		$('[name=name]').val('Condition ' + ((Cond ? Cond.length : 0)+1));
+		$('[name=name]').val('Condition ' + (Idx+1));
 	}
 
-
-
 	function save() {
-		let d = {
-			pump_rpm: 1780,
-			drive: 0,
-			viscosity: 1,
-			specific_gravity: 1,
-			stages: 1,
-			speed: true,
-			line: 1,
-			power_rating: 30,
-			motor_rpm: 1780,
-			motor_voltage: 460,
-			amps: 225.4,
-			margin: 0,
-			fraction: 1,
-			cost: .05,
-			flow: 2000,
-			head: 277,
-			est_power: 150,
-			field_voltage: 460
-		};
-		
+		if (Idx == Cond.length) {
+			Cond.push({
+				pump_rpm: 1780,
+				drive: 0,
+				viscosity: 1,
+				specific_gravity: 1,
+				stages: 1,
+				speed: true,
+				line: 1,
+				power_rating: 30,
+				motor_rpm: 1780,
+				motor_voltage: 460,
+				amps: 225.4,
+				margin: 0,
+				fraction: 1,
+				cost: .05,
+				flow: 2000,
+				head: 277,
+				est_power: 150,
+				field_voltage: 460				
+			});
+		}				
 		$('[name]').each(function(i,e) {
-			d[$(e).attr('name')] = $(e).val();
+			Cond[Idx][$(e).attr('name')] = $(e).val();
 		});
-		if (!Cond) {
-			Cond = [];
-		}
+		LS.setItem('conditions',JSON.stringify(Cond));			
 		Back();
-		if (window['Idx']) {
-			Cond[Idx] = d;
-			updatePump(d);
-		} else {
-			Idx = Cond.length;
-			Cond.push(d);
-			addPump(d);
-		}
-		LS.setItem('conditions',JSON.stringify(Cond));
-
-
-			
+		setPump();
 	}
 	
 </script>
