--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   <title>Pumping System Assessment Tool</title>
+  <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
     <style>
       html {
         font-family: sans-serif;
