--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       
       function Back() {
         $('body').html(Main);
+        $('body').append($('body script').remove());       
+
       }
     </script>
   </head>
