--- a/details.html
+++ b/details.html
@@ -245,11 +245,10 @@ Pump Style
     Idx = $(e).parent().data('idx');
     load('notes');
   }
-  function pumpEff(v) {    //debugger;
+  function pumpEff(v) {   
     let i = $(v).parent().index();
     let r = $('td:contains("Pump efficiency")').parent();
     r.children().eq(i).html(Bridge.pumpEff($(v).val()));
-    //$('td:contains("Pump efficiency")').next().html(Bridge.pumpEff(v)+' <span>(109)</span>');
   }
 
 
@@ -260,7 +259,7 @@ Pump Style
     if (th.length == 0) {
       addPump(Cond[Idx]);
     } else {
-      $(th).find('button').text(Cond[Idx].name);      
+      $(th).find('span').text(Cond[Idx].name);      
     }
   }
   
